src/objects/Apttus_Billing__PaymentMethod__c.object
<CustomObject>
    <description>Stores the information needed to process a payment.</description>
    <fields>
        <fullName>Apttus_Billing__AccountId__c</fullName>
        <description>The account associated with the payment method.</description>
        <inlineHelpText>The account associated with the payment method.</inlineHelpText>
        <label>Account Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Methods</relationshipLabel>
        <relationshipName>PaymentMethods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__CardExpirationMonth__c</fullName>
        <description>Expiration month of the card used.</description>
        <inlineHelpText>Expiration month of the card used.</inlineHelpText>
        <label>Card Expiration Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__CardExpirationYear__c</fullName>
        <description>Expiration year of the card used.</description>
        <inlineHelpText>Expiration year of the card used.</inlineHelpText>
        <label>Card Expiration Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__CardNumber__c</fullName>
        <description>The masked card number.</description>
        <inlineHelpText>The masked card number.</inlineHelpText>
        <label>Card Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__CardType__c</fullName>
        <description>The type of the credit card used.</description>
        <inlineHelpText>The type of the credit card used.</inlineHelpText>
        <label>Card Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ECheckAccountNumber__c</fullName>
        <description>Masked eCheck account number.</description>
        <inlineHelpText>Masked eCheck account number.</inlineHelpText>
        <label>ECheck Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ECheckAccountType__c</fullName>
        <description>eCheck account type.</description>
        <inlineHelpText>eCheck account type.</inlineHelpText>
        <label>ECheck Account Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ECheckRoutingNumber__c</fullName>
        <description>Masked eCheck routing number.</description>
        <inlineHelpText>Masked eCheck routing number.</inlineHelpText>
        <label>ECheck Routing Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, use this as the default payment method for the account.</description>
        <inlineHelpText>If checked, use this as the default payment method for the account.</inlineHelpText>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__PaymentMethodName__c</fullName>
        <description>Customer entered name for this payment method.</description>
        <inlineHelpText>Customer entered name for this payment method.</inlineHelpText>
        <label>Payment Method Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__PaymentMethodType__c</fullName>
        <description>The transaction type of the payment method.</description>
        <inlineHelpText>The transaction type of the payment method.</inlineHelpText>
        <label>Payment Method Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Card</fullName>
                </value>
                <value>
                    <fullName>eCheck</fullName>
                </value>
                <value>
                    <fullName>Visa Checkout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ProfileId__c</fullName>
        <description>Assigned by gateway. Used to identify customer profile.</description>
        <inlineHelpText>Assigned by gateway. Used to identify customer profile.</inlineHelpText>
        <label>Profile Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__Status__c</fullName>
        <description>Shows the current status of the Payment Method.</description>
        <inlineHelpText>Shows the current status of the Payment Method.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TokenId__c</fullName>
        <description>Token for the payment method. Assigned by the Gateway.</description>
        <inlineHelpText>Token for the payment method. Assigned by the Gateway.</inlineHelpText>
        <label>Token Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Payment Method</label>
    <nameField>
        <displayFormat>PM-{00000000}</displayFormat>
        <label>Payment Method Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>